Fix spacing with lists and paragraphs and nested lists
Fixes #160

--- a/hines/static/hines/src/sass/partials/_lists.scss
+++ b/hines/static/hines/src/sass/partials/_lists.scss
@@ -40,3 +40,9 @@ ol {
 dd:last-child {
   margin-bottom: 0;
 }
+
+
+// Makes spacing better if we have p's in li's and also nested lists.
+li > p {
+  margin-top: $paragraph-margin-bottom;
+}
